syntax = "proto3";

package wkttesting;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// A message using all well-known types for testing template generation
message WellKnownTypesMessage {
  google.protobuf.Timestamp timestamp_field = 1;
  google.protobuf.Duration duration_field = 2;
  google.protobuf.StringValue string_value = 3;
  google.protobuf.Int32Value int32_value = 4;
  google.protobuf.Int64Value int64_value = 5;
  google.protobuf.UInt32Value uint32_value = 6;
  google.protobuf.UInt64Value uint64_value = 7;
  google.protobuf.FloatValue float_value = 8;
  google.protobuf.DoubleValue double_value = 9;
  google.protobuf.BoolValue bool_value = 10;
  google.protobuf.BytesValue bytes_value = 11;
  google.protobuf.Any any_field = 12;
  google.protobuf.Struct struct_field = 13;
  google.protobuf.Value value_field = 14;
  google.protobuf.ListValue list_value_field = 15;
  google.protobuf.FieldMask field_mask = 16;
}

// Service for testing well-known types
service WellKnownTypesService {
  rpc Echo(WellKnownTypesMessage) returns (WellKnownTypesMessage);
  rpc GetEmpty(google.protobuf.Empty) returns (google.protobuf.Empty);
}
